# XTBoostClaude

./: .env.example  .env.tmp  .gitignore  .gitmodules  README.md  codemonkey_tests.json  final_modified_swebench.json  fix_test.py  main.py  pyproject.toml  run1_10instances.jsonl  run2_10instances.jsonl  run3_10instances.jsonl  run50.sh
Oracle_results/: README.md
Oracle_results/code/: cumulative_oracle_analysis.py  oracle_merge.py
Oracle_results/results/: instance_analysis.json  oracle_results.json
UTBoost-enhanced/: .gitignore  LICENSE  intramorphicTesting.py  readme.md  requirements.txt  test_openai_api.py
UTBoost-enhanced/UTGenerator/: test_openai_api.py  test_openai_o3.py
UTBoost-enhanced/update_SWE_Bench/: log_parsers.py  test_spec.py  updated_parser_test_instance_dict.json  updated_parser_test_instance_dict_verified.json
UTGenerator/: main.py  pyproject.toml  requirements.txt  run_localization.py  run_testgen.py
UTGenerator/augtest/: genTest.py  prompt.py
UTGenerator/fl/: FL.py  localize.py
UTGenerator/scripts/: README_cache.md  __init__.py  cache_repos.py
UTGenerator/utgenerator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
UTGenerator/util/: api_requests.py  get_repo_structure.py  model.py  postprocess_data.py  preprocess_data.py  test_anthropic_api.py  test_claude_call.py  test_o3mini_call.py
results/test_localization/: args.json  loc_outputs.jsonl
results/test_merge/: args.json  loc_all_merged_outputs.jsonl  loc_merged_0-1_outputs.jsonl  (+2 more)
tests/: test_openai_api.py  test_openai_o3.py  test_pipeline.sh
(+13 files in other folders)
